# graphical_calculator

./: .gitignore  CMakeLists.txt  README.md
clangd/index/: Communicate.h.D9701CED116A255E.idx  Frame.cpp.B3B1458EB0CAE0EA.idx  Frame.h.B3C3972BC65DFABC.idx  Panels.h.E1720DA43BCC9DE8.idx  RightPanel.cpp.3EA69282324D3792.idx  main.cpp.A88F4E694AA7AB60.idx  main.cpp.F0FAC7E94B963A6C.idx  main.h.4CCC99BCBD2A8714.idx  panels.cpp.0BE159C500729F7A.idx  panels.cpp.739975EECEEAB2B2.idx
src/: Frame.h  LeftPanel.cpp  Panels.h  RightPanel.cpp  main.cpp
test/: CMakeLists.txt
test/clangd/index/: Frame.h.E85A8F11DA1DB9CD.idx  LeftPanel.cpp.C7A10D0AB949E6C8.idx  Panels.h.CB6CF23191684DAE.idx  communicate.cpp.3A8CE0CFBE8E19D0.idx  frame.cpp.07D380C9143028AE.idx  frame.cpp.135721B82F6CC047.idx  main.h.997873AF16B87008.idx
test/src/: Frame.cpp
